vlib/v/checker/tests/right_hand_side_mut.vv
fn main() {
	mut flubbel := 123
	mut wubbel := 234
	_, _ := flubbel, mut wubbel
	print(wubbel)
}
